<resources>
    <string name="app_name">Damão</string>
    <string name="insider_info">Insider Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="explore">Explore</string>
    <string name="des1">Travel to the place and explore its history, nature, culture</string>
    <string name="plan">Plan A Trip</string>
    <string name="des2">Look Up Various Hotels and see location and plan a trip to visit</string>
    <string name="des3">Learn deep secrets of the place from an insider and prepare to be amazed</string>
    <string name="secret_info">Secret Insider Info</string>
    <string name="winner_gets_it_all">Winner Gets It All</string>
    <string name="get_results_to_prove_who_is_the_boss">Get Results to prove who is the boss!</string>
    <string name="s">START</string>
    <string name="todo">TODO</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_daman">Welcome To Daman</string>
    <string name="_4_0">4.0</string>
    <string name="daman">Daman</string>
    <string name="description1">A tiny Indian state sandwiched between Maharashtra, Gujarat and the Arabian Sea, Daman is blessed with the best resources of nature. The history of Daman dates back to over 2000 years back when Daman was going through conquests, surrenders and turmoil. The region was ruled by the Muslim rulers for the next 200 years. Finally the Portuguese took charge over this land in 1534 and ruled over it for a period of 450 years.</string>
    <string name="description2">After breakfast city tour of Daman, visit Devka Beach in Daman is lively destination to be in. It has an amusement park with attractive illumination on festivals. Another is massive Moti Daman Fort dating back to 16th century. It has the massive fort, the stately Light house, gardens, historic monuments and ancient Gothic style churches, are the key places of interest. There is very alluring artificial tourist complex Daman Ganga, having all the recreational facilities, one of the major tourist attractions in Daman and Diu.</string>
    <string name="description3">So, allow you to turn your dream weekend beach vacation to Daman into a reality.</string>
    <string name="location">Location</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="cidacde_des">We would like to introduce Cidade De Daman as one of the leading hotels in Daman, many companies have already sampled our Hospitality. Cidade De Daman Beach Resort is not just a hotel but a complete resort by the Arabian Sea, situated On Devka Beach, Cidade De Daman Beach Resort overlooks the water of the Arabian Sea. The location is situated as a prime business center for Mumbai, Surat, Baroda, Ahmedabad which makes it a favorite spot for corporate and tourist.</string>
    <string name="black_pep_des">The contemporary boutique style resort is a four-star property replete with world-class rooms and suites along with other modern amenities like a, themed restaurants, swimming pool, boardroom and more. Black Pepper takes pride in delivering prompt and friendly service at every point of contact. Be assured that the friendly staff will always be ready to attend to your needs and requests in every possible way. The resort is located in union territory of Daman city.</string>
    <string name="gold_beach_des">Gold Beach Resort sits on a serene beachfront overlooking the majestic Arabian Sea. Spread across two acres of the Devka Beach in Daman, this luxurious resort is an ideal getaway from all the hustle and bustle of city life. Surround yourself with cool sea breezes, astounding views of the sea and sublime services that add a golden touch to your business or leisure experience.</string>
    <string name="sea_rock_des">Hotel Sea Rock Inn is situated at Devka Beach Daman. It’s a Hotel with all the modern amenities. It is the only Hotel having Central Air-conditioned and RO water through out the Hotel. Wi-Fi service is also available non chargeable.The common facilities are-Discotheque, centralized Air Conditioned, doctor on call, laundry, handicap facility, conference hall, lawns, Garden Restaurant.</string>
    <string name="mirasol">An abode which is a cocoon of style and class! Mirasol is a haven of mystical peace and natural serenity! Nestled in lush, tropical grounds of Daman, Mirasol Resort is deeply rooted in it’s local heritage and quintessentially landscaped.</string>
    <string name="miramar">A holiday is all about relaxing – that is what we believe. Our luxury accommodation reiterates this fact. Here, comfort is the key factor along with unmatched hospitality. Our 79 rooms, all air-conditioned, offer you the comfort of home with all the luxuries of being in a hotel.</string>
    <string name="deltin_des">This Hotel in Daman is located on a property spread across 10 acres. It has 176 rooms generously sized at 44 sq metres. Views are of greenery and of the meandering pool .The suites are up to a sprawling 197 sq metres . The spa has 7 treatment rooms . Asian and European treatments are at offer . The Grandice ballroom accommodates 350 people in cluster style seating. All in one, The Deltin is a luxurious Daman Hotel with a capacity of up to 2000 people.</string>
    <string name="history">History</string>
    <string name="history_des3">The use of Portuguese, which was the territory’s official language during the colonial period, is in decline and relegated to home use. It is also used as a liturgical language by the territory’s Catholics. Standard Portuguese exists in a post-creole continuum while Daman and Diu Portuguese is spoken by about 10,000–12,000 people in Daman.</string>
    <string name="history_des2">Gujarati is the mother tongue of most of the territory’s population, as they belong to the Gujarati-speaking Damaniya sub-caste. Along with Gujarati, Hindi and English are all official languages. Hindi and English are official languages because they are official languages of India’s central government. Daman and Diu were once part of a combined union territory along with Goa (a Konkani-speaking region), before Goa became a state in 1987.</string>
    <string name="history_des1">For over 450 years, the coastal enclaves of Daman (Portuguese: Damão) and Diu on the Arabian Sea coast were part of Portuguese India, along with Goa and Dadra and Nagar Haveli. Goa, Daman and Diu were incorporated into the Republic of India on December 19, 1961, by military conquest. Portugal did not recognise the Indian annexation of these territories until the carnation revolution of 1974.The territory of "Goa, Daman and Diu" was administered as a single union territory until 1987, when Goa was granted statehood, leaving Daman and Diu as a separate union territory. Each enclave constitutes one of the union territory's two districts. Daman and Diu are approximately 650 kilometres away from each other by road.</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="enter_rating">Enter rating</string>
    <string name="back">Go Back</string>
    <string name="swim">A competition on strength, stamina and courage as participants take a dive and fight for the ultimate position there is for a swimmer locally</string>
    <string name="sunburn">Sunburn is a commercial EDM (electronic dance music) Festival held in India. It was previously in Vagator, Goa, India every year, but now has been shifted to Pune. It is Asia\'s largest music festival. The festival is an amalgamation of Music, Entertainment, Food and Shopping, and was ranked by CNN in 2009 as one of the Top 10 Festivals in world.The Festival is organized by Percept company owned by Shailendra Singh. Spread over 4 days, the festival has multiple stages with artists playing simultaneously</string>
    <string name="daman_fair">An place where you can experience what is it to be a Damanite(what we call ourselves).Prepare to be blown away</string>
    <string name="singing">This competition is held in the open where all artists come together on a single platform and show their skills. An musically appealing experience taken to an another level</string>
    <string name="devka">Devka Amusement Park is happily situated overlooking the beach and is a perfect destination to travel with your family. With exciting options like water balloon raft, bungy-jumping, swings and cricket pitch, the park is filled with activities that will make your day. There is a beautiful garden at the center of the park that is perfect for spending some quiet leisure time.</string>
    <string name="cathedral">Daman has a strong link to the Catholics owing to its Portuguese connection and Cathedral of Bom Jesus is among the most important religious monument for them.Out of the various holy places, the Cathedral of Bom Jesus is a one of the most popular one. Built long back in 1603, the structure is still beautiful. The astounding design, expert architecture and fine craftsmanship surely reflect the passion with which the Portuguese built this cathedral. This site is surely a treat for the eyes.</string>
    <string name="painting_competition">This competition is held in the open where all artists come together on a single platform and show their skills. An visually appealing experience taken to an another level</string>
    <string name="devka_beach">Devka beach is a sight of pure beauty. Like so many other beaches of Daman, this too is a massive, picturesque and quite unspoilt.The place has clean blue waters, well maintained shores and enough beauty for everybody.</string>
    <string name="fort">This huge fort is also known as the Nani Daman Fort. The most conspicuous part of this place is its magnanimous gateway that faces the river.There is a large statue of St. Jerome, one of the most eminent fathers of the Catholic Church, inside the fort premises. The complex contains other attractions namely the church of Our Lady of the Sea and a Jain temple. The fort on the whole offers a beautiful view of the fish market below and the hustle-bustle that comes along with it. The scenery is beautiful and this is one of the most pretty and popular tourist attractions.</string>
    <string name="circus">This Circus has a circus tent with 5,000 seats with a diameter of 48 by 64 metres and a dome height of 14 metres. It covers an overall area of approximately 2,000 square metres.The largest, most modern and most expensive circus tent of the present can only be described. The construction of the enormous tent allows for the seating of 5.000 spectators. Four 20 meters long steel masts, four steel lattice auxiliary masts, 120 storm and cross beams as well as 250 iron anchors provide necessary security, even during the most violent of storms. In less than one day, the gigantic tent construction "stands" with seats, manège, show stage, light and sound controls - ready for performances, officially approved and in top condition.</string>
    <string name="image_1">Image 1</string>
    <string name="image_2">Image 2</string>
</resources>