<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/add_review">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.santalu.diagonalimageview.DiagonalImageView
                    android:id="@+id/display_image"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/jetty_1"
                    app:di_borderEnabled="false"
                    app:di_direction="left"
                    app:di_overlap="150dp"
                    app:di_position="bottom" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/enter_rating"
                    android:src="@drawable/shell_icon"
                    app:layout_constraintEnd_toEndOf="@+id/display_image"
                    app:layout_constraintHorizontal_bias="0.897"
                    app:layout_constraintStart_toStartOf="@+id/display_image"
                    app:layout_constraintTop_toTopOf="@+id/display_image" />

                <TextView
                    android:id="@+id/ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"
                    tools:text="4.0" />

                <TextView
                    android:id="@+id/detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/display_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.975"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/display_image"
                    app:layout_constraintVertical_bias="0.92"
                    tools:text="@string/daman" />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttons"
                android:layout_below="@id/header"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/location_maps"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/location"
                    android:textColor="#28683f" />
                <Button
                    android:id="@+id/see_reviews"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text="@string/reviews"
                    android:textColor="#28683f" />

            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/buttons"
                android:layout_marginTop="-8dp"
                android:fontFamily="casual"
                android:padding="16dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="@string/des1" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/green"
        android:text="@string/add_review"
        android:textColor="@color/white" />

</RelativeLayout>